fix the scrollbar

--- a/social_media_app/styles/globals.css
+++ b/social_media_app/styles/globals.css
@@ -30,7 +30,13 @@ a {
     background-color: rgb(237, 237, 237);
     border-radius: 40px;
 }
-
 ::-webkit-scrollbar-track {
     background-color: transparent;
+}
+
+
+@media (min-width: 1280px) {
+    .scrollbar-overlay:hover {
+        overflow-y: overlay;
+    }
 }
